Fixed Top-message position mobile

--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -4,6 +4,7 @@
     
     .photo-1{
         width: 100%;
+        position: relative;
         
         .photo-container{
             position: relative;
@@ -11,19 +12,22 @@
             
             .book{
                 position: absolute;
-                top: 50% !important;
                 left: 50%;
+                top: 50%;
                 transform: translate(-50%, -50%);
-                max-width: 65%;
+                width: 60%;
                 z-index: 1;
 
-                h1{
-                    font-size: 3.5rem;
-                    font-weight: 300;
-                    text-transform: capitalize;
-                    color: $white;
-                    line-height: 1.3;
-                    margin-bottom: 1.5rem;
+                .text{
+                    h1{
+                        font-size: 3.5rem;
+                        font-weight: 300;
+                        text-transform: capitalize;
+                        color: $white;
+                        line-height: 1.3;
+                        margin-bottom: 1.5rem;
+                    }
+
                 }
                 button{
                     background: $white;
@@ -49,7 +53,7 @@
             img{
                 position: relative;
                 width: 100%;
-                max-height: 800px;
+                height: 800px;
                 // height: auto;
                 object-fit: cover;
                 z-index: -1;
@@ -188,14 +192,67 @@
             .photo-container{
                 
                 .book{
-                    width: 90% !important;
+                    width: 80% !important;
+                    
     
                     h1{
-                        font-size: 1.5rem !important;
+                        font-size: 2.5rem !important;
+                        font-weight: 300;
+                        text-transform: capitalize;
+                        color: $white;
+                        line-height: 1.2;
+                        margin-bottom: 0 auto;
+                        margin-bottom: 0px;
                     }
+
+                    button{
+                        font-size: 1rem;
+                        padding: 18px 24px;
+                        margin-top: 0 auto;
+                        outline: none;
+    
+                        &:hover{
+                            opacity: .9;
+                        }
+                        
+                        &:active {
+                            box-shadow: 0 1px gray;
+                            transform: translate(.2px,.2px);
+                         }
+                    }
+
+                    
+
+
     
                 }
+
+                img{
+                    position: relative;
+                    width: 100%;
+                    height: 600px !important;
+                    object-fit: cover;
+                    z-index: -1;
+                    filter: brightness(.8) ;
+                    
+                }
                 
+                
+            }
+        }
+
+        .top-message{
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            margin: 4rem 0 !important;
+            h3{
+                align-items: center;
+                font-size: 1.5rem !important;
+                text-align: center;
+                font-weight: 300;
+                max-width: 80% !important;
+                line-height: 1.5;
                 
             }
         }
@@ -211,6 +268,7 @@
                 
                 .book{
                     width: 90% !important;
+                    
     
                     h1{
                         font-size: 1.5rem !important;
@@ -231,14 +289,66 @@
                 
                 .book{
                     width: 80% !important;
-                    z-index: 1;
+                    
     
                     h1{
-                        font-size: 2.5rem !important;
-                        margin-bottom: 1.5rem;
+                        font-size: 3rem !important;
+                        font-weight: 300;
+                        text-transform: capitalize;
+                        color: $white;
+                        line-height: 1.2;
+                        margin-bottom: 0 auto;
+                        margin-bottom: 0px;
                     }
+
+                    button{
+                        font-size: 2rem !important;
+                        padding: 2rem 3rem;
+                        margin-top: 0 auto;
+                        outline: none;
+    
+                        &:hover{
+                            opacity: .9;
+                        }
+                        
+                        &:active {
+                            box-shadow: 0 1px gray;
+                            transform: translate(.2px,.2px);
+                         }
+                    }
+
+                    
+
+
     
                 }
+
+                img{
+                    position: relative;
+                    width: 100%;
+                    height: 900px !important;
+                    object-fit: cover;
+                    z-index: -1;
+                    filter: brightness(.8) ;
+                    
+                }
+                
+                
+            }
+        }
+
+        .top-message{
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            margin: 5rem 0;
+            h3{
+                align-items: center;
+                font-size: 1.8rem !important;
+                text-align: center;
+                font-weight: 300;
+                max-width: 80%;
+                line-height: 1.5;
                 
                 
             }
@@ -246,8 +356,8 @@
     }
 
     // Large devices (desktops, 992px and up)
-    @media (min-width: 992px) {
-
+    @media (min-width: 992px) and (max-width: 1199px) {
+        
        
         
     }
