--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -53,7 +53,7 @@ body {
       
 
       @media (max-width: 575px) {
-        padding: 0 30px;
+        padding: 0 5px;
       }
       @media (min-width: 576px) and (max-width: 767px) {
         padding: 0 30px;
